rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strdouble_sharp_octave.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C𝄪4
Note { pitch: C, accs: [DoubleSharp], octave: Some(4), cents: None }
display:c𝄪4
