rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strdouble_sharp_octave_cents.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C𝄪4-50
Note { pitch: C, accs: [DoubleSharp], octave: Some(4), cents: Some(-50) }
display:c𝄪4-50
