rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strmixed_accidentals.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C#♭n
Note { pitch: C, accs: [Sharp, Flat, Natural], octave: None, cents: None }
display:c♯♭♮
